--- a/Pages/Products/ProductComponent/DualSlider.css
+++ b/Pages/Products/ProductComponent/DualSlider.css
@@ -6,11 +6,12 @@
 }
 
 .slider .thumb {
-  width: 23px;
-  height: 23px;
+  width: 25px;
+  height: 25px;
   cursor: pointer;
   background-color: #ffff;
   border-radius: 100%;
-  border: 2px solid black;
+  border: 8px solid gray;
   top: -10px;
+  box-shadow: 0 2px 6px gray;
 }
