--- a/Pages/Products/ProductComponent/DualSlider.css
+++ b/Pages/Products/ProductComponent/DualSlider.css
@@ -1,17 +1,17 @@
 .slider {
-  width: 100%;
+  width: 90%;
   height: 2px;
   background-color: blue;
   margin-top: 20px;
 }
 
 .slider .thumb {
-  width: 25px;
-  height: 25px;
+  width: 20px;
+  height: 20px;
   cursor: pointer;
   background-color: #ffff;
   border-radius: 100%;
-  border: 8px solid gray;
+  border: 8px solid black;
   top: -10px;
   box-shadow: 0 2px 6px gray;
 }
